[package]
name = "version-test"
description = "a package for texting cargo version resolution"
repository = "https://github.com/ryankurte/rust-version-test"
version = "0.1.1-alpha.1"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
version-test = "0.1.0"
